cluster/apps/eve/artemis/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/group: eve-dev
    hajimari.io/icon: database
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Name,Remote-Groups,Remote-Email
    nginx.ingress.kubernetes.io/auth-signin: https://auth.rwcloud.org?rm=$request_method
    nginx.ingress.kubernetes.io/auth-snippet: "proxy_set_header X-Forwarded-Method
      $request_method;   \n"
    nginx.ingress.kubernetes.io/auth-url: https://auth.rwcloud.org/api/verify
  name: eve-artemis  
spec:
  ingressClassName: nginx
  rules:
  - host: eve-dev-artemis.rwcloud.org
    http:
      paths:
      - backend:
          service:
            name: eve-hdls-svc
            port:
              number: 8161
        path: /console
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - eve-dev-artemis.rwcloud.org
